# Riego

./: .bin_timestamp  .ninja_deps  .ninja_log  2.0  CMakeLists.txt  README.md  cmake_install.cmake  config.env  flujodecaja.md  guía completa de instalacion y conexion.md  hello_world.elf  hello_world.map  ldgen_libraries  project_description.json  sdkconfig  x509_crt_bundle.S
bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  bootloader.elf  bootloader.map  build.ninja  cmake_install.cmake  compile_commands.json  config.env  project_description.json
bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
bootloader/esp-idf/: cmake_install.cmake
components/ESP32_LoRaWAN-master/: idf_component.yml
components/Heltec_ESP32-master/: CMakeLists.txt
components/WiFi_Kit_series-master/: CMakeLists.txt  idf_component.yml
components/espressif__esp_insights/: CMakeLists.txt
components/espressif__esp_rainmaker/: CMakeLists.txt
esp-idf/: cmake_install.cmake
esp-idf/app_trace/: cmake_install.cmake
esp-idf/app_update/: cmake_install.cmake
esp-idf/bootloader/: cmake_install.cmake
esp-idf/bootloader_support/: cmake_install.cmake
esp-idf/bt/: cmake_install.cmake
esp-idf/cmock/: cmake_install.cmake
esp-idf/console/: cmake_install.cmake
esp-idf/cxx/: cmake_install.cmake
esp-idf/driver/: cmake_install.cmake
esp-idf/efuse/: cmake_install.cmake
esp-idf/esp-tls/: cmake_install.cmake
esp-idf/esp_adc/: cmake_install.cmake
esp-idf/esp_app_format/: cmake_install.cmake
main/: CMakeLists.txt  hello_world_main.c
(+103 files in other folders)
